[gd_scene load_steps=8 format=3 uid="uid://fb8t2f0fl8tp"]

[ext_resource type="Script" uid="uid://by08m7xm4g4qk" path="res://scenes/simulations/measurements/accuracy_minigame.gd" id="1_5k5kv"]
[ext_resource type="Texture2D" uid="uid://bsdgqbvsf3hx8" path="res://assets/simulations/measurements/bg.png" id="2_gxua6"]
[ext_resource type="Texture2D" uid="uid://bytjbl1f2uvnx" path="res://assets/simulations/measurement/target.png" id="3_lunag"]
[ext_resource type="Texture2D" uid="uid://dw5dfyaopnq1m" path="res://assets/gui/buttons/big_button.png" id="4_csld5"]
[ext_resource type="Texture2D" uid="uid://6cfbps6eh044" path="res://assets/gui/buttons/big_button_pressed.png" id="5_ihojm"]
[ext_resource type="Texture2D" uid="uid://cchvqyrwd1cxg" path="res://assets/gui/buttons/big_button_hover.png" id="6_t5m5i"]
[ext_resource type="FontFile" uid="uid://d35n2ag4cnf5o" path="res://font/fs-pixel-sans-unicode-regular.ttf" id="7_e7l0p"]

[node name="Accuracy" type="Node2D"]
script = ExtResource("1_5k5kv")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(180, 90)
scale = Vector2(1.011236, 1.0227273)
texture = ExtResource("2_gxua6")
metadata/_edit_lock_ = true

[node name="Target" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(183, 89)
texture = ExtResource("3_lunag")

[node name="HighAccuracyButton" type="TextureButton" parent="."]
unique_name_in_owner = true
offset_left = 11.0
offset_top = 67.0
offset_right = 111.0
offset_bottom = 91.000015
texture_normal = ExtResource("4_csld5")
texture_pressed = ExtResource("5_ihojm")
texture_hover = ExtResource("6_t5m5i")
texture_disabled = ExtResource("5_ihojm")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="HighAccuracyButton"]
layout_mode = 0
offset_top = 2.0
offset_right = 100.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("7_e7l0p")
text = "High Accuracy"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LowAccuracyButton" type="TextureButton" parent="."]
unique_name_in_owner = true
offset_left = 11.0
offset_top = 93.0
offset_right = 111.0
offset_bottom = 117.000015
texture_normal = ExtResource("4_csld5")
texture_pressed = ExtResource("5_ihojm")
texture_hover = ExtResource("6_t5m5i")
texture_disabled = ExtResource("5_ihojm")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LowAccuracyButton"]
layout_mode = 0
offset_top = 2.0
offset_right = 100.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("7_e7l0p")
text = "Low Accuracy"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HighPrecisionButton" type="TextureButton" parent="."]
unique_name_in_owner = true
offset_left = 253.0
offset_top = 67.0
offset_right = 353.0
offset_bottom = 91.000015
texture_normal = ExtResource("4_csld5")
texture_pressed = ExtResource("5_ihojm")
texture_hover = ExtResource("6_t5m5i")
texture_disabled = ExtResource("5_ihojm")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="HighPrecisionButton"]
layout_mode = 0
offset_top = 2.0
offset_right = 100.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("7_e7l0p")
text = "High Precision"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LowPrecisionButton" type="TextureButton" parent="."]
unique_name_in_owner = true
offset_left = 253.0
offset_top = 93.0
offset_right = 353.0
offset_bottom = 117.000015
texture_normal = ExtResource("4_csld5")
texture_pressed = ExtResource("5_ihojm")
texture_hover = ExtResource("6_t5m5i")
texture_disabled = ExtResource("5_ihojm")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LowPrecisionButton"]
layout_mode = 0
offset_top = 2.0
offset_right = 100.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("7_e7l0p")
text = "Low Precision"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
